_generated-doc/2.13/config/quarkus-quartz-quartz-runtime-config.adoc

:summaryTableId: quarkus-quartz-quartz-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-quartz-quartz-runtime-config_configuration]]link:#quarkus-quartz-quartz-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.instance-name]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.instance-name[quarkus.quartz.instance-name]`

[.description]
--
The name of the Quartz instance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_INSTANCE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_INSTANCE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`QuarkusQuartzScheduler`


a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.thread-count]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.thread-count[quarkus.quartz.thread-count]`

[.description]
--
The size of scheduler thread pool. This will initialize the number of worker threads in the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`25`


a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.thread-priority]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.thread-priority[quarkus.quartz.thread-priority]`

[.description]
--
Thread priority of worker threads in the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_THREAD_PRIORITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_THREAD_PRIORITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-threshold]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-threshold[quarkus.quartz.misfire-threshold]`

[.description]
--
Defines how late the schedulers should be to be considered misfired.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_THRESHOLD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.start-mode]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.start-mode[quarkus.quartz.start-mode]`

[.description]
--
Scheduler can be started in different modes: normal, forced or halted. By default, the scheduler is not started unless a `io.quarkus.scheduler.Scheduled` business method is found. If set to "forced", scheduler will be started even if no scheduled business methods are found. This is necessary for "pure" programmatic scheduling. Additionally, setting it to "halted" will behave just like forced mode but the scheduler will not start triggering jobs until an explicit start is called from the main scheduler. This is useful to programmatically register listeners before scheduler starts performing some work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_START_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_START_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`normal`, `forced`, `halted` 
|`normal`


h|[[quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-policy-per-jobs-misfire-policy-per-job-configuration]]link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-policy-per-jobs-misfire-policy-per-job-configuration[Misfire policy per job configuration]

h|Type
h|Default

a| [[quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-policy.-identity]]`link:#quarkus-quartz-quartz-runtime-config_quarkus.quartz.misfire-policy.-identity[quarkus.quartz.misfire-policy."identity"]`

[.description]
--
The quartz misfire policy for this job.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUARTZ_MISFIRE_POLICY__IDENTITY_+++`
endif::add-copy-button-to-env-var[]
-- a|
`smart-policy`, `ignore-misfire-policy`, `fire-now`, `simple-trigger-reschedule-now-with-existing-repeat-count`, `simple-trigger-reschedule-now-with-remaining-repeat-count`, `simple-trigger-reschedule-next-with-remaining-count`, `simple-trigger-reschedule-next-with-existing-count`, `cron-trigger-do-nothing` 
|`smart-policy`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
